# simplerfcomm

./: CMakeLists.txt  README.md
res/: org.bluez.Adapter1.xml  org.bluez.Agent1.xml  org.bluez.AgentManager1.xml  org.freedesktop.DBus.Properties.xml
src/: bluezagent.h  bluezqt_dbustypes.h  bt.cpp  bt.h  main.cpp
